[tool.poetry]
name = "repl_core"
version = "0.1.0"
description = "Framework to write REPL script interacting with http backends"
authors = ["glaunay <pitooon@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.8"
prompt-toolkit = "^3.0.28"
requests = "^2.27.1"
#decorator = "^5.1.1"

[tool.poetry.dev-dependencies]
fastapi = "^0.74.1"
uvicorn = "^0.17.5"
#repl_core = { path = "./", develop=true }
#pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
